<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FairportComputersService</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="type">Type</string>
    <string name="problem">Problem</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_customer_page">CustomerPage</string>

</resources>
