<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fairportcomputersservice.SignIn" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/name_line" >
        
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/Name" />
        <EditText 
            android:id="@+id/name_edit"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/name_label"
            android:layout_marginLeft="20dp"
            android:hint="@string/Name"
            android:inputType="text" />
	</RelativeLayout>
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/phone_line" >
        
        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/phone" />
        <EditText 
            android:id="@+id/phone_edit"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/phone_label"
            android:layout_marginLeft="20dp"
            android:hint="@string/phone"
            android:inputType="phone" />
	</RelativeLayout>
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/email_line" >
        
        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/email" />
        <EditText 
            android:id="@+id/email_edit"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/email_label"
            android:layout_marginLeft="20dp"
            android:hint="@string/email"
            android:inputType="text" />
	</RelativeLayout>
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/type_line" >
        
        <TextView
            android:id="@+id/type_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/type" />
        <EditText 
            android:id="@+id/type_edit"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/type_label"
            android:layout_marginLeft="20dp"
            android:hint="@string/type"
            android:inputType="text" />
	</RelativeLayout>
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/type_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/problem_line" >
        
        <TextView
            android:id="@+id/problem_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/problem" />
        <EditText 
            android:id="@+id/problem_edit"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/problem_label"
            android:layout_marginLeft="20dp"
            android:hint="@string/problem"
            android:inputType="text" />
	</RelativeLayout>
</RelativeLayout>
